--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -32,7 +32,9 @@
       </mat-form-field>
     </mat-card>
   </div>
-  <button [disabled]="inProgress" (click)="startTimer()">Start Over</button>
+  <button mat-button [disabled]="inProgress" (click)="viewResults()">
+    Results!
+  </button>
   <ol>
     <li *ngFor="let incorrectProblem of incorrectProblems">
       {{incorrectProblem}}
