Begin refactor to service of question logic

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -12,13 +12,13 @@
   </mat-card-title>
   <div class="container">
     <mat-card class="operand">
-      <mat-card-content>{{leftOperand}}</mat-card-content>
+      <mat-card-content>{{question.leftOperand}}</mat-card-content>
     </mat-card>
     <mat-card class="operator">
       <mat-card-content>+</mat-card-content>
     </mat-card>
     <mat-card class="operand">
-      <mat-card-content>{{rightOperand}}</mat-card-content>
+      <mat-card-content>{{question.rightOperand}}</mat-card-content>
     </mat-card>
     <mat-card class="equals">
         <mat-card-content>=</mat-card-content>
