--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
     <a mat-list-item (click)="newGame()" routerLink="/game" routerLinkActive="active">
       New Game!
     </a>
-    <a mat-list-item routerLink="/setup">
+    <a mat-list-item routerLink="/settings" routerLinkActive="active">
       Pick Problems
     </a>
     <a mat-list-item routerLink="/scores">
