--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -15,7 +15,7 @@
       <mat-card-content>{{question.leftOperand}}</mat-card-content>
     </mat-card>
     <mat-card class="operator">
-      <mat-card-content>+</mat-card-content>
+      <mat-card-content>{{question.operator.symbol}}</mat-card-content>
     </mat-card>
     <mat-card class="operand">
       <mat-card-content>{{question.rightOperand}}</mat-card-content>
